# EdgeSense

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  claude.md
.claude/: .fuse_hidden000003db00000001  settings.json
CMake/: Rpi5-toolchain.cmake
CalibData/: copy-calib-from-rpi.sh
CalibData/CalibData/: SensorsCalib.json
Include/EdgeSense/Core/: CalibDataStore.h  CalibrationEngine.h  Scheduler.h  SensorManager.h  ThreadManager.h
Include/EdgeSense/HAL/: I2cMaster.h
Include/EdgeSense/Hal/: LinuxI2c.h
Include/EdgeSense/IPC/: SocketServer.h
Include/EdgeSense/Logger/: Logger.h
Include/EdgeSense/Navigator/: AhrsEngine.h  MadgwickFilter.h  OrientationData.h
Include/EdgeSense/Sensors/: AccelCalibrator.h  CalibratorBase.h  EnvSensor.h  GyroCalibrator.h  ImuSensor.h  LPS25HB_EnvSens.h  LSM9DS1_ImuSens.h  LSM9DS1_ImuSensAccGyro.h  LSM9DS1_ImuSensMag.h  MagCalibrator.h  PressureTempCalibrator.h  SensorCalib.h  Sensors.h  SensorsRegistry.h
Include/EdgeSense/Utils/: CircularBuffer.h  Utils.h
Src/: main.cpp
Src/Core/: CalibDataStore.cpp  CalibrationEngine.cpp  RealTimeGoalArchitetcure.md  Scheduler.cpp  SensorManager.cpp  ThreadManager.cpp
Src/HAL/: I2cMaster.cpp
Src/Hal/: LinuxI2c.cpp
Src/IPC/: SocketServer.cpp
Src/Logger/: Logger.cpp
Src/Navigator/: AhrsEngine.cpp  MadgwickFilter.cpp
Src/Sensors/: AccelCalibrator.cpp  EnvSensor.cpp  GyroCalibrator.cpp  ImuSensor.cpp  LPS25HB_EnvSens.cpp  LSM9DS1_ImuSens.cpp  LSM9DS1_ImuSensAccGyro.cpp  LSM9DS1_ImuSensMag.cpp  MagCalibrator.cpp  PressureTempCalibrator.cpp  Sensors.cpp  SensorsRegistry.cpp
Src/Utils/: Utils.cpp
